*Empty MediaWiki Message*

--- a/Pangabuktut.mw
+++ b/Pangabuktut.mw
@@ -1,5 +1,5 @@
-:''Para king mas malaparan a panga-eksplika king pangabuktut kareng [[mammal]], lon ya ing [[:en:mammalian pregnancy]]. ''
-:''Para king paglalawe ning medisina king pangabuktut, lon ya ing [[:en:Obstetrics]].''
+:''Para king mas malaparan a panga-eksplika king pangabuktut kareng [[mammal]], lon ya ing [[:en:mammalian pregnancy|Mammalian Pregnancy]]. ''
+:''Para king paglalawe ning medisina king pangabuktut, lon ya ing [[:en:Obstetrics|Obstetrics]].''
 ''<nowiki/>''
 
 [[File:PregnantWoman.jpg|thumb|Metung a babaing mabuktut]]
