*Empty MediaWiki Message*

--- a/Arizona.mw
+++ b/Arizona.mw
@@ -8,7 +8,7 @@
  Fullname = State ning Arizona |
  Flag = Flag of Arizona.svg |
  Flaglink = [[Bandera ning Arizona]] |
- Seal = |
+ Seal = Arizona-StateSeal.svg |
  Map = Map_of_USA_highlighting_Arizona.png |
  Nickname = Ing [[Grand Canyon]] State, Ing Tumbagang State |
  Capital = [[Phoenix, Arizona|Phoenix]] |
