*Empty MediaWiki Message*

--- a/Arizona.mw
+++ b/Arizona.mw
@@ -94,3 +94,5 @@ Tartan = None |
 [[File:Noaa topo az.jpg|thumb|200px|State Topography Image: Arizona]]
 
 Ing '''State ning Arizona''' ({{Audio-IPA|en-us-Arizona.ogg|/ærɪˈzoʊnə/}}) metung yang  [[U.S. state|state]] atiu king [[Southwestern United States|maulingalbugan labuad]] na ning [[United States]]. Ing kayang tungku (kabisera) ampong pekamaragul a lakanbalen iyapin ing [[Phoenix, Arizona|Phoenix]]. Ing pangaduang pekamaragul a lakanbalen iyapin ing [[Tucson, Arizona|Tucson]], tutuki la reng apat a Phoenix [[metropolitan area]] lakanbalen a  [[Mesa, Arizona|Mesa]], [[Glendale, Arizona|Glendale]], [[Chandler, Arizona|Chandler]], ampong [[Scottsdale, Arizona|Scottsdale]].<ref>http://en.wikipedia.org/wiki/List_of_cities_in_Arizona_%28by_population%29</ref>
+
+{{Dake Politiku ning United States}}
