*Empty MediaWiki Message*

--- a/Alaska.mw
+++ b/Alaska.mw
@@ -3,7 +3,7 @@
 | Fullname = State ning Alaska
 | Flag = Flag of Alaska.svg
 | Flaglink = [[Bandera ning Alaska]]
-| Seal = AlaskaStateSealTransparent.png
+| Seal = Alaska-StateSeal.svg
 | Map = Map_of_USA_highlighting_Alaska.png
 | Nickname = The Last Frontier, Ing gabun ning Kapitangan a Benging Aldo
 | Motto = Pangulu ing Bukas
