*Empty MediaWiki Message*

--- a/Colorado.mw
+++ b/Colorado.mw
@@ -5,7 +5,7 @@
   Fullname        = Bandera ning Colorado |
   Flag            = Flag of Colorado.svg |
   Flaglink      = [[Flag of Colorado]] |
-  Seal            =  |
+  Seal            = Seal_of_Colorado.svg |
   Map             = Map of USA highlighting Colorado.png |
   Nickname        = The Centennial State |
   Capital         = [[Denver, Colorado|Denver]] |
