*Empty MediaWiki Message*

--- a/Connecticut.mw
+++ b/Connecticut.mw
@@ -5,8 +5,8 @@
   Flag            = Flag of Connecticut.svg |
   Flower          = Mountain Laurel
   Tree            = White Oak
-Flaglink      = [[Bandera ning Connecticut]] |
-  Seal            = Connecticut state seal.png |
+Flaglink          = [[Bandera ning Connecticut]] |
+  Seal            = Seal_of_Connecticut.svg |
   Map             = Map of USA highlighting Connecticut.png |
   Nickname        = The Constitution State |
   Capital         = [[Hartford, Connecticut|Hartford]] |
