--- a/Delaware.mw
+++ b/Delaware.mw
@@ -2,9 +2,9 @@
 {{US state |
  Name = Delaware |
  Fullname = State of Delaware |
- Flag = |
+ Flag = Flag_of_Delaware.svg |
  Flaglink = [[Flag of Delaware]] |
- Seal = DE_Seal_Color_250w.gif |
+ Seal = Seal_of_Delaware.svg |
  Map = Map of USA highlighting Delaware.png |
  Nickname = The First State |
  Capital = [[Dover, Delaware|Dover]] |
