*Empty MediaWiki Message*

--- a/Georgia_(U.S._state).mw
+++ b/Georgia_(U.S._state).mw
@@ -3,7 +3,7 @@
   Fullname        = State of Georgia|
   Flag            = Flag of Georgia (U.S. state).svg |
   Flaglink        = [[Flag of Georgia (United States)|Bandera ning Georgia]] |
-  Seal            = Georgia state seal.png |
+  Seal            = Seal_of_Georgia.svg |
   Seallink        = [[Seal of Georgia (U.S. state)|Seal ning Georgia]] |
   Map             = Map of USA highlighting Georgia.png |
   Nickname        = Peach State / Empire State of the South |
