--- a/Idaho.mw
+++ b/Idaho.mw
@@ -3,7 +3,7 @@
  Fullname = State ning Idaho |
  Flag = Flag of Idaho.svg |
  Flaglink = [[Bandera ning  Idaho]] |
- Seal = |
+ Seal = Seal of Idaho.svg |
  Map = Map_of_USA_highlighting_Idaho.png |
  Nickname = Gem State |
  Capital = [[Boise, Idaho|Boise]] |
