--- a/Kansas.mw
+++ b/Kansas.mw
@@ -3,8 +3,8 @@
   Name            = Kansas |
   Fullname        = State ning Kansas |
   Flag            = Flag of Kansas.svg |
-  Flaglink      = [[Bandera ning Kansas]] |
-  Seal             = Kansas state seal.png |
+  Flaglink        = [[Bandera ning Kansas]] |
+  Seal            = Seal of Kansas.svg |
   Map             = Map of USA highlighting Kansas.png |
   Nickname        = The Sunflower State |
   Capital         = [[Topeka, Kansas|Topeka]] |
