*Empty MediaWiki Message*

--- a/Maine.mw
+++ b/Maine.mw
@@ -3,7 +3,7 @@
  Fullname = State ning Maine |
  Flag = Flag of Maine.svg |
  Flaglink = [[Bandera ning Maine]] |
- Seal = Maine state seal.png |
+ Seal = Seal of Maine.svg |
  Map = Map of USA highlighting Maine.png |
  Nickname = The Pine Tree State |
  State number = 23rd state|
