--- a/Maryland.mw
+++ b/Maryland.mw
@@ -4,7 +4,7 @@
  Fullname = State ning Maryland |
  Flag = Flag of Maryland.svg |
  Flaglink = [[Bandera ning Maryland]] |
- Seal = Maryland state seal.png |
+ Seal = Seal of Maryland.svg |
  Map = Map_of_USA_highlighting_Maryland.png |
  Nickname = Old Line State; Free State |
  Capital = [[Annapolis, Maryland|Annapolis]] |
