*Empty MediaWiki Message*

--- a/New_Hampshire.mw
+++ b/New_Hampshire.mw
@@ -3,7 +3,7 @@
  Fullname = State ning New Hampshire |
  Flag = Flag of New Hampshire.svg|
  Flaglink = [[Bandera ning New Hampshire]] |
- Seal =  |
+ Seal = Seal of New Hampshire.svg |
  Map = Map of USA highlighting New Hampshire.png |
  Nickname = Granite State, <br />Mother of Rivers, White Mountain State,<br /> Switzerland of America [http://www.nh.gov/nhinfo/fastfact.html]|
  Motto = [[Live Free or Die]]|
