--- a/New_Mexico.mw
+++ b/New_Mexico.mw
@@ -3,7 +3,7 @@
  Fullname = State ning New Mexico<br />Estado de Nuevo México | 
  Flag = Flag of New Mexico.svg | 
  Flaglink = [[Bandera ning New Mexico]] | 
- Seal = | 
+ Seal = Seal of New Mexico.svg | 
  Map = Map of USA NM.svg | 
  Nickname = Land of Enchantment | 
  Motto = Crescit eundo (It grows as it goes) | 
