*Empty MediaWiki Message*

--- a/New_York.mw
+++ b/New_York.mw
@@ -4,7 +4,7 @@
  Fullname = State ning New York |
  Flag = Flag of New York.svg |
  Flaglink = [[Bandera ning New York]] |
- Seal = |
+ Seal = Seal of New York.svg |
  Map = Map of USA NY.svg |
  Nickname = The Empire State |
  Capital = [[Albany, New York|Albany]] |
