*Empty MediaWiki Message*

--- a/Pangulung_Dakota.mw
+++ b/Pangulung_Dakota.mw
@@ -3,7 +3,7 @@
  Fullname = State ning North Dakota |
  Flag = Flag of North Dakota.svg |
  Flaglink = [[Bandera ning North Dakota]] |
- Seal = NorthDakotastateseal.jpg |
+ Seal = Seal of North Dakota.svg |
  Map = Map_of_USA_highlighting_North_Dakota.png |
  Nickname = Peace Garden State,<br /> Roughrider State, Flickertail State |
  Capital = [[Bismarck, North Dakota|Bismarck]] |
