*Empty MediaWiki Message*

--- a/Oklahoma.mw
+++ b/Oklahoma.mw
@@ -1,9 +1,9 @@
 {{US state |
  Name = Oklahoma |
  Fullname = State ning Oklahoma |
- Flag = Bandera ning Oklahoma.svg |
+ Flag = Flag of Oklahoma.svg |
  Flaglink = [[Bandera ning Oklahoma]] |
- Seal =  |
+ Seal = Seal of Oklahoma.svg |
  Map = Map_of_USA_highlighting_Oklahoma.png |
  Nickname = Sooner State |
  Capital = [[Oklahoma City, Oklahoma|Oklahoma City]] |
