*Empty MediaWiki Message*

--- a/Pennsylvania.mw
+++ b/Pennsylvania.mw
@@ -4,7 +4,7 @@
  Fullname = Commonwealth ning Pennsylvania |
  Flag = Flag of Pennsylvania.svg |
  Flaglink = [[Bandera ning  Pennsylvania]] |
- Seal = |
+ Seal = Seal of Pennsylvania.svg |
  Map = Map of USA highlighting Pennsylvania.png |
  Nickname = Keystone State |
  Capital = [[Harrisburg, Pennsylvania|Harrisburg]] |
