*Empty MediaWiki Message*

--- a/Pulu_ning_Rhode.mw
+++ b/Pulu_ning_Rhode.mw
@@ -3,7 +3,7 @@
  Fullname = The State ning Rhode Island at Providence Plantations |
  Flag = Flag of Rhode Island.svg |or go to 50states.com
  Flaglink = [[Bandera ning Rhode Island]] |
- Seal = Rhode Island state seal.png |
+ Seal = Seal of Rhode Island.svg |
  Map = Map of USA highlighting Rhode Island.png |
  Nickname = The Ocean State, Little Rhody |
  Official Language(s) = English|
