*Empty MediaWiki Message*

--- a/Texas.mw
+++ b/Texas.mw
@@ -4,8 +4,8 @@
  | Fullname = State ning Texas
  | Flag = Flag of Texas.svg
  | Flaglink = [[Flag of Texas]]
- | Seal =
- | Map =
+ | Seal = Seal of Texas.svg
+ | Map = 
  | Nickname = Lone Star State
  | Capital = [[Austin, Texas|Austin]]
  | LargestCity = [[Houston, Texas|Houston]]
