*Empty MediaWiki Message*

--- a/Virginia.mw
+++ b/Virginia.mw
@@ -4,7 +4,7 @@
  Fullname = Commonwealth of Virginia |
  Flag = Flag of Virginia.svg |
  Flaglink = [[Flag of Virginia]] |
- Seal = |
+ Seal = Seal of Virginia.svg |
  Map = Map of USA highlighting Virginia.png |
  Nickname = Old Dominion |
  Capital = [[Richmond, Virginia|Richmond]] |
