*Empty MediaWiki Message*

--- a/Albugang_Virginia.mw
+++ b/Albugang_Virginia.mw
@@ -3,7 +3,7 @@
  Fullname = State ning West Virginia |
  Flag = Flag of West Virginia.svg |
  Flaglink = [[Bandera ning West Virginia]] |
- Seal = True Color Seal of the State of West Virginia.png |
+ Seal = Seal of West Virginia.svg |
  Map = Map_of_USA_highlighting_West_Virginia.png |
  Nickname = Mountain State |
  Capital = [[Charleston, West Virginia|Charleston]] |
