*Empty MediaWiki Message*

--- a/New_York_Lakanbalen.mw
+++ b/New_York_Lakanbalen.mw
@@ -3,7 +3,7 @@
 |nickname = [[Big Apple]]", "[[Gotham]]", "NYC", "City That Never Sleeps", "The Concrete Jungle", "The City So Nice They Named It Twice" 
 |image_skyline = Top_of_Rock_Cropped.jpg 
 |image_flag = Flag of New York City.svg 
-|image_seal = {{#ifeq:New York City|New York City|Us-nycsl.png|}} 
+|image_seal = Seal_of_New_York_City.svg 
 |image_map = Map of New York Highlighting New York City.svg
 |mapsize = 200px 
 |map_caption = Location in the state of [[New York]]
