*Empty MediaWiki Message*

--- a/Paris.mw
+++ b/Paris.mw
@@ -9,7 +9,7 @@
 |caption = Paris' [[Eiffel tower]] as seen from the esplanade du [[Trocadéro]].
 |image_flag = Flag of Paris.svg
 |image_flag_size = 85px
-|image_coat_of_arms =
+|image_coat_of_arms = Blason_paris_75.svg
 |image_coat_of_arms_size = 120px
 |flag_legend = City flag
 |Coat_of_arms_legend = City coat of arms
