*Empty MediaWiki Message*

--- a/New_Brunswick.mw
+++ b/New_Brunswick.mw
@@ -5,7 +5,7 @@
 | Fullname            = Lalawigan ning New Brunswick
 | EntityAdjective     = Provincial
 | Flag                = Flag of New Brunswick.svg
-| CoatOfArms          = 
+| CoatOfArms          = Stemma_del_New_Brunswick.jpg
 | Map                 = New Brunswick-map.png
 | Motto               = Spem reduxit (Hope restored)
 | Capital             = [[Fredericton, New Brunswick|Fredericton]]
