*Empty MediaWiki Message*

--- a/New_Brunswick.mw
+++ b/New_Brunswick.mw
@@ -14,9 +14,9 @@
 | Flower              = [[Viola cucullata|Purple Violet]]
 | Tree                = [[Balsam Fir]]
 | Bird                = [[Black-capped Chickadee]]
-| Premier             = [[Shawn Graham]]
+| Premier             = [[Brian Gallant]]
 | PremierParty        = [[New Brunswick Liberal Association|Liberal]]
-| Viceroy             = [[Herménégilde Chiasson]]
+| Viceroy             = [[Jocelyne Roy-Vienneau]]
 | ViceroyType         = Lieutenant-Governor
 | PostalAbbreviation  = NB
 | PostalCodePrefix    = [[List of E Postal Codes of Canada|E]]
