*Empty MediaWiki Message*

--- a/Terranova_at_Labrador.mw
+++ b/Terranova_at_Labrador.mw
@@ -6,7 +6,7 @@
 | EntityAdjective     = Provincial
 | Offical Logo        = Newnllogo.jpg
 | Flag                = Flag_of_Newfoundland_and_Labrador.svg
-| CoatOfArms          =
+| CoatOfArms          = Blason_ca_Terre-Neuve-et-Labrador.svg
 | Map                 = Newfoundland_and_Labrador-map.png
 | Flower              = Pitcher Plant
 | Tree                = Black Spruce
@@ -15,9 +15,9 @@
 | OfficialLang        = English
 | Capital             = [[St. John's, Newfoundland and Labrador|St. John's]]
 | LargestCity         = St. John's
-| Premier             = [[Kathy Dunderdale]]
+| Premier             = [[Paul Davis]]
 | PremierParty        = [[Progressive Conservative Party of Newfoundland and Labrador|PC]]
-| Viceroy             = [[John Crosbie]]
+| Viceroy             = [[Frank Fagan]]
 | ViceroyType         = Lieutenant-Governor
 | PostalAbbreviation  = NL (formerly NF) 
 | PostalCodePrefix    = [[List of A Postal Codes of Canada|A]]
