*Empty MediaWiki Message*

--- a/Nova_Scotia.mw
+++ b/Nova_Scotia.mw
@@ -14,9 +14,9 @@
 | Bird                = [[Osprey]]
 | Capital             = [[Halifax, Nova Scotia|Halifax]]
 | LargestCity         = [[Halifax Regional Municipality]]
-| Premier             = [[Rodney MacDonald]]
+| Premier             = [[Stephen McNeil]]
 | PremierParty        = [[Nova Scotia Progressive Conservative Party|PC]]
-| Viceroy             = [[Mayann E. Francis]]
+| Viceroy             = [[John James Grant]]
 | ViceroyType         = Lieutenant-Governor
 | PostalAbbreviation  = NS
 | PostalCodePrefix    = [[List of B Postal Codes of Canada|B]]
