*Empty MediaWiki Message*

--- a/Prince_Edward_Island.mw
+++ b/Prince_Edward_Island.mw
@@ -6,7 +6,7 @@
 |Fullname            = Lalawigan ning Prince Edward Island
 |EntityAdjective     = Provincial
 |Flag                = Flag of Prince Edward Island.svg
-|CoatOfArms          =
+|CoatOfArms          = Arms_of_Prince_Edward_Island.svg
 |Map                 = Prince Edward Island-map.png
 |Motto               = "Parva Sub Ingenti"{{spaces|2}}<small>([[Latin]])<br />"The Small Protected By The Great"</small>
 |OfficialLang        = [[English language|English]]
@@ -15,9 +15,9 @@
 |Bird                = [[Blue Jay]]
 |Capital             = [[Charlottetown, Prince Edward Island|Charlottetown]]
 |LargestCity         = [[Charlottetown, Prince Edward Island|Charlottetown]]
-|Premier             = [[Pat Binns]]
-|PremierParty        = [[Prince Edward Island Progressive Conservative Party|PC]]
-|Viceroy             = [[Barbara Oliver Hagerman]]
+|Premier             = [[Wade MacLauchlan]]
+|PremierParty        = [[Prince Edward Island Liberal Party|Liberal]]
+|Viceroy             = [[Frank Lewis]]
 |ViceroyType         = Lieutenant-Governor
 |PostalAbbreviation  = PE
 |PostalCodePrefix    = [[List of C Postal Codes of Canada|C]]
