*Empty MediaWiki Message*

--- a/Manitoba.mw
+++ b/Manitoba.mw
@@ -5,7 +5,7 @@
 | Fullname            = Lalawigan ning Manitoba
 | EntityAdjective     = Provincial
 | Flag                = Flag of Manitoba.svg
-| CoatOfArms          = Mb_coa_big.jpg
+| CoatOfArms          = Blason_province_ca_Manitoba_(NormeFr).svg
 | Map                 = Manitoba, Canada.svg
 | Motto               = Gloriosus et Liber ([[Latin]]: Glorious and free)
 | OfficialLang        = [[English language|English]] at [[French language|French]], per mandate of the [[Constitution Act 1982]]
@@ -14,9 +14,9 @@
 | Bird                = [[Great Grey Owl]]
 | Capital             = [[Winnipeg, Manitoba|Winnipeg]]
 | LargestCity         = Winnipeg
-| Viceroy             = [[John Harvard (politician)|John Harvard]]
+| Viceroy             = [[Philip Lee]]
 | ViceroyType         = Lieutenant-Governor
-| Premier             = [[Gary Doer]]
+| Premier             = [[Greg Selinger]]
 | PremierParty        = [[New Democratic Party of Manitoba|NDP]]
 | PostalAbbreviation  = MB
 | PostalCodePrefix    = [[List of R Postal Codes of Canada|R]]
