*Empty MediaWiki Message*

--- a/Saskatchewan.mw
+++ b/Saskatchewan.mw
@@ -5,7 +5,7 @@
 | Fullname            = Lalawigan ning Saskatchewan
 | EntityAdjective     = Provincial
 | Flag                = Flag_of_Saskatchewan.svg
-| CoatOfArms          =
+| CoatOfArms          = Arms_of_Saskatchewan.svg
 | Map                 = Saskatchewan-map.png
 | Motto               = Multis E Gentibus Vires ([[Latin]]: "From many peoples strength")
 | OfficialLang        = [[English language|English]]
@@ -14,9 +14,9 @@
 | Bird                = [[Sharp-tailed Grouse]]
 | Capital             = [[Regina, Saskatchewan|Regina]]
 | LargestCity         = [[Saskatoon, Saskatchewan|Saskatoon]]
-| Premier             = [[Lorne Calvert]]
-| PremierParty        = [[Saskatchewan New Democrats|NDP]]
-| Viceroy             = [[Gordon Barnhart]]
+| Premier             = [[Brad Wall]]
+| PremierParty        = [[Saskatchewan Party]]
+| Viceroy             = [[Vaughn Schofield]]
 | ViceroyType         = Lieutenant-Governor
 | PostalAbbreviation  = SK
 | PostalCodePrefix    = [[List of S Postal Codes of Canada|S]]
