*Empty MediaWiki Message*

--- a/Alberta.mw
+++ b/Alberta.mw
@@ -5,7 +5,7 @@
 |Fullname            = Lalawigan ning Alberta
 |EntityAdjective     = Provincial
 |Flag                = Flag of Alberta.svg
-|CoatOfArms          =
+|CoatOfArms          = Shield_of_Alberta.svg
 |Map                 = Alberta, Canada.svg
 |Motto               = ''"Fortis et liber"''{{spaces|2}}<small>([[Latin]])<br />"Strong and free"
 |OfficialLang        = [[English language|English]] (see below)
@@ -15,9 +15,9 @@
 |Fish                = [[Bulltrout]]
 |Capital             = [[Edmonton, Alberta|Edmonton]]
 |LargestCity         = [[Calgary]]
-|Premier             = [[Ed Stelmach]]
-|PremierParty        = [[Alberta Progressive Conservatives|PC]]
-|Viceroy             = [[Norman Kwong]]
+|Premier             = [[Rachel Notley]]
+|PremierParty        = [[Alberta New Democratic Party|NPD]]
+|Viceroy             = [[Donald Ethell]]
 |ViceroyType         = Lieutenant-Governor
 |PostalAbbreviation  = AB
 |PostalCodePrefix    = [[List of T Postal Codes of Canada|T]]
