*Empty MediaWiki Message*

--- a/British_Columbia.mw
+++ b/British_Columbia.mw
@@ -3,7 +3,7 @@
 |AlternateName       = Colombie-Britannique
 |EntityAdjective     = Provincial
 |Flag                = Flag of British Columbia.svg
-|CoatOfArms          = COA-BC-Large.jpg
+|CoatOfArms          = Coat_of_Arms_of_British_Columbia.png
 |Map                 = British Columbia-map.png
 |Motto               = Splendor Sine Occasu ([[Latin]]: Splendour without diminishment)
 |OfficialLang        = [[English language|English]] ''de facto''<br />[[French language|French]] (none stated in law)
@@ -13,9 +13,9 @@
 |Animal              = [[Spirit Bear]]
 |Capital             = [[Victoria, British Columbia|Victoria]]
 |LargestCity         = [[Vancouver, British Columbia|Vancouver]]
-|Premier             = [[Gordon Campbell]] (2001-)
+|Premier             = [[Christy Clarck]] 
 |PremierParty        = [[British Columbia Liberal Party|BC Liberal]]
-|Viceroy             = [[Steven Point]] (2007-)
+|Viceroy             = [[Judith Guichon]] 
 |ViceroyType         = Lieutenant-Governor
 |PostalAbbreviation  = BC
 |PostalCodePrefix    = [[List of V Postal Codes of Canada|V]]
