*Empty MediaWiki Message*

--- a/Yukon.mw
+++ b/Yukon.mw
@@ -6,7 +6,7 @@
 | Fullname            = Yukon 
 | EntityAdjective     = Territorial
 | Flag                = Flag of Yukon.svg
-| CoatOfArms          = Yukon coa.png
+| CoatOfArms          = Coat_of_arms_of_Yukon.svg
 | Map                 = Yukon Territory-map.png
 | Motto               = none
 | OfficialLang        = [[English language|English]], [[French language|French]]
