*Empty MediaWiki Message*

--- a/Northwest_Territories.mw
+++ b/Northwest_Territories.mw
@@ -5,7 +5,7 @@
 | Fullname            = Northwest Territories
 | EntityAdjective     = Territorial
 | Flag                = Flag of the Northwest Territories.svg
-| CoatOfArms          = Nwt-coat.png
+| CoatOfArms          = Coat_of_arms_of_Northwest_Territories.svg
 | Map                 = Northwest Territories-map.png
 | Motto               = none
 | OfficialLang        = [[Dene Suline language|Chipewyan]], [[Cree language|Cree]], [[English language|English]], [[French language|French]], [[Gwich’in language|Gwich’in]], [[Inuinnaqtun]], [[Inuktitut]], [[Inuvialuktun]], [[Slavey language|North Slavey]], [[Slavey language|South Slavey]], [[Dogrib language|Tłįchǫ]] <ref name="lang">[http://web.archive.org/web/20050408070402/http://www.justice.gov.nt.ca/PDF/ACTS/Official_Languages.pdf Northwest Territories Official Languages Act, 1988] (as amended 1988, 1991-1992, 2003)</ref>
