*Empty MediaWiki Message*

--- a/Nunavut.mw
+++ b/Nunavut.mw
@@ -5,7 +5,7 @@
 | Fullname            = [[File:Nunavut.png|55px|The word "Nunavut" in Inuktitut syllabics]]
 | Flag                = Flag of Nunavut.svg
 | EntityAdjective     = Territorial
-| CoatOfArms          =
+| CoatOfArms          = ArmoirieNunavut.png
 | Map                 = Nunavut-map.png
 | Motto               = Nunavut Sannginivut<br />([[Inuktitut]]: Nunavut our strength or Our land our strength)
 | OfficialLang        = [[Inuktitut]], [[Inuinnaqtun]], [[English language|English]], [[French language|French]]
