SVG version with better borders ([[Commons:Commons:GlobalReplace|GlobalReplace v0.3]])

--- a/Administratibung_pangadake_ning_Georgia_(bangsa).mw
+++ b/Administratibung_pangadake_ning_Georgia_(bangsa).mw
@@ -4,7 +4,7 @@
 |-----
 ! colspan="3" bgcolor=#8B864E | <font size="+1" color=white>Labuad ning Georgia</font>
 |-----
-| colspan="3" align="center" | [[File:Regions of Georgia.png|300px]]<br />
+| colspan="3" align="center" | [[File:Regions of Georgia (country).svg|300px]]<br />
 |-----
 ! colspan="3" bgcolor=#CDC673 | Legend
 |-----
