*Empty MediaWiki Message*

--- a/Kansasaga.mw
+++ b/Kansasaga.mw
@@ -12,6 +12,7 @@
 |binomial = ''Abrus precatorius''
 |binomial_authority = [[Carolus Linnaeus|L.]], 1753
 |}}
+[[File:Abrus precatorius MHNT.BOT.2007.40.132.jpg|thumb|''Abrus precatorius'']]
 
 Ing '''kansasaga''' (''Abrus precatorius''), a ausan dang ''jequirity,<ref name="wagstaff-2008">{{cite book |title=International Poisonous Plants Checklist: An Evidence-Based Reference |last=Wagstaff |first=D. Jesse |year=2008 |publisher=[[CRC Press]] |isbn=1420062522 |page=1 |accessdate=October 7, 2012 |url=http://books.google.com/books?id=h7tbd-5ZAQ8C&pg=PA1&lpg=PA1&dq=Abrus+precatorius+Jequirity&source=bl&ots=RnaagnGezA&sig=B-yk1i29Jny5OMPVCtGEvPIbH4k&hl=en&sa=X&ei=1FNzUI2YCqbi2AXe64DABw&ved=0CDkQ6AEwAg#v=onepage&q=Abrus%20precatorius%20Jequirity&f=false}}</ref> Crab's eye,<ref name="wagstaff-2008" /> rosary pea,<ref name="wagstaff-2008" /> John Crow Bead,<ref>{{cite book |title=Phytochemical Dictionary of the Leguminosae, Volume 1 |last=Bisby |first=Frank |year=1994 |publisher=CRC Press |isbn=0412397706 |page=1 |accessdate=October 7, 2012 |url=http://books.google.com/books?id=pqOcEBcwySkC&pg=PA1&lpg=PA1&dq=John+Crow+Bead+Abrus+precatorius+precatory&source=bl&ots=BoYDPKtDOY&sig=UD3yL4yNQ1WYx2Aos_wG4zDh5Cc&hl=en&sa=X&ei=B1hzUO7IE4XG2wWTpoD4CQ&ved=0CEEQ6AEwBA#v=onepage&q=John%20Crow%20Bead%20Abrus%20precatorius%20precatory&f=false}}</ref> precatory bean,<ref name="wagstaff-2008" /> Indian licorice,<ref name="wagstaff-2008" /> Akar Saga, gidee gidee<ref name="wagstaff-2008" /> ''o'' [[Jumbie]] bead<ref name="wagstaff-2008" /> ''king Ingles,<ref name="Mendes 1986, p. 79">Mendes (1986), p. 79.</ref>(ing tauli king [[Trinidad & Tobago]]) metung yang payat ampong pilmihan (''perennial'') a baging a kukulate kareng dutung, [[palungpung]] ampong bakud a palungpung (''hedge''). Metung yang legume a maki makabang bulung a maki tela-pakpak (''pinnate'') a bulung-bulungan (''leaflets'').
 
