*Empty MediaWiki Message*

--- a/Wenchang.mw
+++ b/Wenchang.mw
@@ -8,7 +8,7 @@
 |native_name            = 文昌
 |nickname               = 
 |motto                  = 
-|image_skyline          = Wenchang 2.JPG
+|image_skyline          = Wenchang City view - 02.JPG
 |imagesize              = 
 |image_caption          = 
 |image_flag             = 
