*Empty MediaWiki Message*

--- a/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
+++ b/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
@@ -31,7 +31,7 @@ KKPK main objectives is to united the [[Kapampangan people|Kapampangan]] people,
 
 ==Leadership==
 
-The Founder is [https://commons.wikimedia.org/wiki/File:Jetlee_Yusi_Tiongco.jpg Jetlee Y. Tiongco] an OFW in [[Saudi Arabia]], 2014-2015 Officers, The KKPK Advisers, Board of Trustees and Board of Administrators.<ref>{{cite web|title=KKPK Officers|url=http://kkpkintl.zyro.com/KKPK-Officers/}}</ref><ref>{{cite web|title=KKPK Organizational Chart|url=http://kkpkintl.zyro.com/KKPK-Organizational-Chart//}}</ref>
+The Founder is [https://commons.wikimedia.org/wiki/File:Jetlee_Yusi_Tiongco.jpg Jetlee Y. Tiongco] an OFW in [[Saudi Arabia]], 2014-2015 Officers, The KKPK Advisers, Board of Trustees, Fundraising Committee, Budget & Finance Committee, Projects Committee, Advisers and Administrators.<ref>{{cite web|title=KKPK Officers|url=http://kkpkintl.zyro.com/KKPK-Officers/}}</ref><ref>{{cite web|title=KKPK Organizational Chart|url=http://kkpkintl.zyro.com/KKPK-Organizational-Chart//}}</ref>
 
 ==Chapters/Sub-Groups==
 *KKPK Team Apamama ([[Apalit]], [[Macabebe, Pampanga|Macabebe]], [[Masantol,_Pampanga|Masantol]] & [[San Simon, Pampanga|San Simon]])
