*Empty MediaWiki Message*

--- a/Prepektura_ning_Kagawa.mw
+++ b/Prepektura_ning_Kagawa.mw
@@ -1,4 +1,4 @@
-{{redirect3|Kagawa|For the pacifist and labor activist, see [[Toyohiko Kagawa]]}}
+{{redirect3|Kagawa|Para king pasipista at aktibistang pang-obra, lon ye ing [[Toyohiko Kagawa]]}}
 {{Citations missing|date=July 2007}}
 <!-- See [[Wikipedia:WikiProject Japanese prefectures]] for guidelines 
 -->{{Infobox Prefecture Japan
