--- a/Template:Labuad_at_Administratibung_Pangadake_ning_Hapon.mw
+++ b/Template:Labuad_at_Administratibung_Pangadake_ning_Hapon.mw
@@ -1,6 +1,6 @@
 {{Navbox
-|name = Labuad at administratibung pangadake ning Japan
-|title = [[Ding Labuad ning Japan|Labuad]] at [[Administratibung pangadake ning Japan|administratibung pangadake]] ning [[Japan]]
+|name = Labuad at Administratibung angadake ning Hapon
+|title = [[Ding Labuad ning Japan|Labuad]] at [[Administratibung pangadake ning Japan|Administratibung Pangadake]] ning [[Hapon]]
 |titlestyle = background:mistyrose;
 |list1 = <div>
 '''[[Ding Labuad ning Japan|Labuad]]'''<br/>
@@ -15,7 +15,7 @@
 [[Kyūshū]]{{·}} 
 [[Ryūkyū Islands|Ryūkyū]]<br>
 
-'''[[Prefecture na ning Japan|Prefecture]]'''<br/>
+'''[[Prepektura na ning Japan|Prepektura]]'''<br/>
 [[Aichi Prefecture|Aichi]]{{·}} 
 [[Akita Prefecture|Akita]]{{·}} 
 [[Aomori Prefecture|Aomori]]{{·}} 
