*Empty MediaWiki Message*

--- a/Template:Labuad_at_Administratibung_Pangadake_ning_Hapon.mw
+++ b/Template:Labuad_at_Administratibung_Pangadake_ning_Hapon.mw
@@ -1,5 +1,5 @@
 {{Navbox
-|name = Labuad at Administratibung angadake ning Hapon
+|name = Labuad at Administratibung Pangadake ning Hapon
 |title = [[Ding Labuad ning Japan|Labuad]] at [[Administratibung pangadake ning Japan|Administratibung Pangadake]] ning [[Hapon]]
 |titlestyle = background:mistyrose;
 |list1 = <div>
