*Empty MediaWiki Message*

--- a/Template:Labwad_at_Administratibung_Pangadake_ning_Mauling_Korea.mw
+++ b/Template:Labwad_at_Administratibung_Pangadake_ning_Mauling_Korea.mw
@@ -4,7 +4,7 @@
 | state     = {{{state|autocollapse}}}
 | bodyclass = hlist
 
-| group1 = [[Ding Labwad ning Korea|Deng Labwad]]
+| group1 = [[Ding Labwad ning Korea|Ding Labwad]]
 | list1  =
 * [[Seoul National Capital Area|Capital area]]
 * [[Gwandong]]
