*Empty MediaWiki Message*

--- a/Nauru.mw
+++ b/Nauru.mw
@@ -4,7 +4,7 @@
 |conventional_long_name   = Republic of Nauru
 |common_name              = Nauru 
 |image_flag               = Flag of Nauru.svg 
-|image_coat               = 
+|image_coat               = Coat of arms of Nauru.svg
 |image_map                = LocationNauru.png
 |national_motto           = "God's Will First"
 |national_anthem          = ''[[Nauru Bwiema]]'' 
