Replacing Mars.jpg with [[File:Mars_Hubble.jpg]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:Duplicate|Duplicate]]: Exact or scaled-down duplicate: [[:commons::File:Mars Hubble.jpg|]]).

--- a/Marti.mw
+++ b/Marti.mw
@@ -1,4 +1,4 @@
-[[File:Mars.jpg|thumb|250px|right|Atin yang yelu ing Mars king kayang North ampong South Pole]]
+[[File:Mars Hubble.jpg|thumb|250px|right|Atin yang yelu ing Mars king kayang North ampong South Pole]]
 
 Ing '''Mars''' ing kapat a [[planeta]] manibat king [[Aldo]] king kekatamung [[Solar System]].
 
