--- a/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
+++ b/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
@@ -18,9 +18,9 @@
 | demographics2_info1     = [[Pampanga]] (71%),[[Tarlac]] (50%) & [[Bataan]] (4%)  
 }}
 
-The '''Kapampangan Ku Pagmaragul Ku (KKPK) International Inc.'''<ref>{{cite news|author1=United Nation|title=Kapampangan Ku Pagmaragul Ku (KKPK) International Inc. (United Nations Profile)|url=https://esango.un.org/civilsociety/simpleSearch.do;jsessionid=09BA2BCA63F958E19665FB337C47A7B1?method=search&searchTypeRedef=simpleSearch&sessionCheck=false&searchType=simpleSearch&organizationNamee=kapampangan+ku+pagmaragul+ku}}</ref> is a Filipino Nonprofit Charitable Organization which was initially established on September 18, 2011 by Jetlee Y. Tiongco.<ref>{{cite news|author1=Navales, Reynaldo G. (September 21, 2014)|title=Kapampangan FB group to continue mission for poor|url=http://www.sunstar.com.ph/pampanga/local-news/2014/09/21/kapampangan-fb-group-continue-mission-poor-366817|accessdate=20 January 2015|publisher=Suns Star Pampanga}}</ref> The KKPK Board of Directors, Board of Administrators, Advisers, Officers & Members living in [[Pampanga]],<ref name=SunStar358956>{{cite news|last1=Navales|first1=Reynaldo G.|title=Kapampangan group donates food packages to orphanage|url=http://www.sunstar.com.ph/pampanga/local-news/2014/08/10/kapampangan-group-donates-food-packages-orphanage-358956|accessdate=14 January 2015|agency=SunStar Pampanga|publisher=SunStar Publishing|date=10 August 2014}}</ref> [[Tarlac]], [[Bataan]]<ref name=SunStar358956 /><ref>{{cite web|last1=There was also a distribution of seeds and pesticides by|title=Kapampangan Ku Pagmaragul Ku|url=http://santaritapampanga.gov.ph/index.php/about-santa-rita/news-events/181-mymp-public-service|website=Official Website of Municipality of Sta Rita, Pampanga|accessdate=28 March 2015}}</ref> and in the other countries.  
+Ing '''Kapampangan Ku Pagmaragul Ku (KKPK) International Inc.'''<ref>{{cite news|author1=United Nation|title=Kapampangan Ku Pagmaragul Ku (KKPK) International Inc. (United Nations Profile)|url=https://esango.un.org/civilsociety/simpleSearch.do;jsessionid=09BA2BCA63F958E19665FB337C47A7B1?method=search&searchTypeRedef=simpleSearch&sessionCheck=false&searchType=simpleSearch&organizationNamee=kapampangan+ku+pagmaragul+ku}}</ref> metung yang Organisasyun mitatag niyang Setyembri 18, 2011 queng pamuntucan ng Jetlee Y. Tiongco.<ref>{{cite news|author1=Navales, Reynaldo G. (September 21, 2014)|title=Kapampangan FB group to continue mission for poor|url=http://www.sunstar.com.ph/pampanga/local-news/2014/09/21/kapampangan-fb-group-continue-mission-poor-366817|accessdate=20 January 2015|publisher=Suns Star Pampanga}}</ref> Ding KKPK Board of Directors, Administrators, Advisers, Opisyalis at Miyembru makatuknang queng [[Pampanga]],<ref name=SunStar358956>{{cite news|last1=Navales|first1=Reynaldo G.|title=Kapampangan group donates food packages to orphanage|url=http://www.sunstar.com.ph/pampanga/local-news/2014/08/10/kapampangan-group-donates-food-packages-orphanage-358956|accessdate=14 January 2015|agency=SunStar Pampanga|publisher=SunStar Publishing|date=10 August 2014}}</ref> [[Tarlac]], [[Bataan]]<ref name=SunStar358956 /><ref>{{cite web|last1=There was also a distribution of seeds and pesticides by|title=Kapampangan Ku Pagmaragul Ku|url=http://santaritapampanga.gov.ph/index.php/about-santa-rita/news-events/181-mymp-public-service|website=Official Website of Municipality of Sta Rita, Pampanga|accessdate=28 March 2015}}</ref> at aliwang Bansa.  
 
-KKPK main objectives is to united the [[Kapampangan people|Kapampangan]] people, to Provide Services, Agricultural & Environmental Services. To ensure the equitable transformation. With these Platform, the KKPK regularly held a mission in different areas of Pampanga and in other area of Kapampangan dialect in a different activities, such as gift giving to elderly, Orphanage, Aetas Community, Clean-up drive, Tree Planting, Distribution of Vegetable Seeds and Seedlings<ref>[http://santaritapampanga.gov.ph/index.php/about-santa-rita/news-events/181-mymp-public-service There was also a distribution of seeds and pesticides by "Kapampangan Ku Pagmaragul Ku". (Municipality of Sta Rita Official Website)]</ref> 
+Ing Pangunahing layunin ning KKPK para apisanmetung nala ding Kapampangan, mamyeng serbisyu, Agrikultura at Environmental Services. Para siguraduan ing ustung pamagbayu at pamanyulung. Queng plataporma ning KKPK regular dang gagawan ing misyun at proyektun queng miyaliwang lugar ning Pampanga at aliwang lugar na sasaakupan ning Kapampangan queng miyaliwang actibidad. calupa ning pamamyeng regalu caring Home For the Aged, Ophanage at careng Aeta’s, atin la naman Clean up Dirve, Tree Planting at pamamyeng vegetable seedlings.<ref>[http://santaritapampanga.gov.ph/index.php/about-santa-rita/news-events/181-mymp-public-service There was also a distribution of seeds and pesticides by "Kapampangan Ku Pagmaragul Ku". (Municipality of Sta Rita Official Website)]</ref> 
 
 
 ==Particular Objectives==
@@ -31,7 +31,7 @@ KKPK main objectives is to united the [[Kapampangan people|Kapampangan]] people,
 
 ==Leadership==
 
-The Founder is [https://commons.wikimedia.org/wiki/File:Jetlee_Yusi_Tiongco.jpg Jetlee Y. Tiongco] an OFW in [[Saudi Arabia]], 2014-2015 Officers, The KKPK Advisers, Board of Trustees, Fundraising Committee, Budget & Finance Committee, Projects Committee, Advisers and Administrators.<ref>{{cite web|title=KKPK Officers|url=http://kkpkintl.zyro.com/KKPK-Officers/}}</ref><ref>{{cite web|title=KKPK Organizational Chart|url=http://kkpkintl.zyro.com/KKPK-Organizational-Chart//}}</ref>
+Ing Founder apin I [https://commons.wikimedia.org/wiki/File:Jetlee_Yusi_Tiongco.jpg Jetlee Y. Tiongco] metung yang OFW queng [[Saudi Arabia]], 2014-2015 Officers, Din KKPK Advisers, Board of Trustees, Fundraising Committee, Budget & Finance Committee, Projects Committee, Advisers and Administrators.<ref>{{cite web|title=KKPK Officers|url=http://kkpkintl.zyro.com/KKPK-Officers/}}</ref><ref>{{cite web|title=KKPK Organizational Chart|url=http://kkpkintl.zyro.com/KKPK-Organizational-Chart//}}</ref>
 
 ==Chapters/Sub-Groups==
 *KKPK Team Apamama ([[Apalit]], [[Macabebe, Pampanga|Macabebe]], [[Masantol,_Pampanga|Masantol]] & [[San Simon, Pampanga|San Simon]])
