*Empty MediaWiki Message*

--- a/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
+++ b/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
@@ -50,7 +50,7 @@ Ing Founder apin I [https://commons.wikimedia.org/wiki/File:Jetlee_Yusi_Tiongco.
 *[https://twitter.com/kkpkintofficial @KKPKIntOfficial] on [[Twitter]]
 *[https://instagram.com/kkpkintlofficial/ @kkpkintlofficial] on [[Instagram]]
 *[http://kkpkintl.zyro.com/ Kapampangan Ku Pagmaragul Ku (KKPK) International Inc. Official Website]
-*[http://www.sunstar.com.ph/pampanga/local-news/2015/01/21/kapampangan-facebook-group-host-social-service-program-387861 Kapampangan Facebook group to host social service program. By Ian Ocampo Flora of Sunstar Pampanga]
+*[http://archive.sunstar.com.ph/pampanga/local-news/2015/01/21/kapampangan-facebook-group-host-social-service-program-387861 Kapampangan Facebook group to host social service program. By Ian Ocampo Flora of Sunstar Pampanga]
 *[http://www.youtube.com/watch?v=E0JTTBuWlu4 KKPK queng TV Patrol Pampanga]
 *[http://siuala.com/aguman-sulat-kapampangan/ Siuálâ ding Meángûbié on Kulitan]
 *[http://usappampanga.com/forum/viewtopic.php?t=5 USAP Pampanga Forum]
