*Empty MediaWiki Message*

--- a/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
+++ b/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
@@ -5,13 +5,13 @@
 | motto                   = "''Lugud, Kapayapan, Pamibuklud-buklud ''" (Love, Peace & Unity)
 | image_map               = Kapampangan Ku Pagmaragul Ku (KKPK) International Inc.jpg
 | map_alt                 =
-| subdivision_type        = Country
-| subdivision_name        = {{flag|Philippines}}
-| subdivision_type1       = [[Regions of the Philippines|Region]]
-| subdivision_name1       = [[Central Luzon]] (Region III)
-| established_title       = Founded
-| established_date        = September 18, 2011
-| established_title1      = Province
+| subdivision_type        = Bansa
+| subdivision_name        = {{flag|Filipinas}}
+| subdivision_type1       = [[Regions of the Philippines|Labuad]]
+| subdivision_name1       = [[Kalibudtarang Luzon]] <small>(Labuad III)</small>
+| established_title       = Mitatag
+| established_date        = Septyembri 18, 2011
+| established_title1      = Probinsya
 | established_date1       = [[Pampanga]]
 | demographics_type2      = [[Demographics]]
 | demographics2_title1    = [[Kapampangan language]]
