--- a/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
+++ b/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
@@ -23,13 +23,13 @@ Ing '''Kapampangan Ku Pagmaragul Ku (KKPK) International Inc.'''<ref>{{cite news
 Ing Pangunahing layunin ning KKPK para apisanmetung nala ding Kapampangan, mamyeng serbisyu, Agrikultura at Serbisyu para queng Kalikasan. Siguraduan ing ustung pamagbayu at pamanyulung. Queng plataporma ning KKPK regular dang gagawan ing misyun at proyektun queng miyaliwang lugar ning Pampanga at aliwang lugar na sasaakupan ning Kapampangan queng miyaliwang actibidad. calupa ning pamamyeng regalu careng Home For the Aged, Orphanage at careng Aeta’s, Clean up Dirve, Tree Planting at pamamyeng vegetable seedlings.<ref>[http://santaritapampanga.gov.ph/index.php/about-santa-rita/news-events/181-mymp-public-service There was also a distribution of seeds and pesticides by "Kapampangan Ku Pagmaragul Ku". (Municipality of Sta Rita Official Website)]</ref> 
 
 
-==Particular na Layunin==
+==Partikular na Layunin==
 
 *To assist and provide the Kapampangan people in their basic social needs.
 *To uplift the pride of Kapampangan people.
 *To assert unification in all issues related to the Kapampangan people.
 
-==Leadership==
+== Mamuntukan==
 
 Ing Founder apin I [https://commons.wikimedia.org/wiki/File:Jetlee_Yusi_Tiongco.jpg Jetlee Y. Tiongco] metung yang OFW queng [[Saudi Arabia]], 2014-2015 Officers, Ding KKPK Advisers, Board of Trustees, Fundraising Committee, Budget & Finance Committee, Projects Committee, Advisers at Administrators.<ref>{{cite web|title=KKPK Officers|url=http://kkpkintl.zyro.com/KKPK-Officers/}}</ref><ref>{{cite web|title=KKPK Organizational Chart|url=http://kkpkintl.zyro.com/KKPK-Organizational-Chart//}}</ref>
 
