/* Chapters/Sub-Groups */

--- a/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
+++ b/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
@@ -33,7 +33,7 @@ Ing Pangunahing layunin ning KKPK para apisanmetung nala ding Kapampangan, mamye
 
 Ing Founder apin I [https://commons.wikimedia.org/wiki/File:Jetlee_Yusi_Tiongco.jpg Jetlee Y. Tiongco] metung yang OFW queng [[Saudi Arabia]], 2014-2015 Officers, Ding KKPK Advisers, Board of Trustees, Fundraising Committee, Budget & Finance Committee, Projects Committee, Advisers at Administrators.<ref>{{cite web|title=KKPK Officers|url=http://kkpkintl.zyro.com/KKPK-Officers/}}</ref><ref>{{cite web|title=KKPK Organizational Chart|url=http://kkpkintl.zyro.com/KKPK-Organizational-Chart//}}</ref>
 
-==Chapters/Sub-Groups==
+==Deng Sanga (Chapters)/Sub-Groups==
 *KKPK Team Apamama ([[Apalit]], [[Macabebe, Pampanga|Macabebe]], [[Masantol,_Pampanga|Masantol]] & [[San Simon, Pampanga|San Simon]])
 *KKPK Team Centro ([[San_Fernando,_Pampanga|City of San Fernando]], [[Mexico]], [[Arayat, Pampanga|Arayat]], [[Minalin, Pampanga|Minalin]], [[Bacolor, Pampanga|Bacolor]], & [[Santo_Tomas,_Pampanga|Santo Tomas]])
 *KKPK Team [[Floridablanca, Pampanga|Florida]]
