--- a/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
+++ b/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
@@ -41,10 +41,10 @@ Ing Founder apin I [https://commons.wikimedia.org/wiki/File:Jetlee_Yusi_Tiongco.
 *KKPK Team SPG ([[Santa_Rita,_Pampanga|Sta Rita]], [[Porac,_Pampanga|Porac]] & [[Guagua,_Pampanga|Guagua]])
 *KKPK Team The Northern Connection (TNC) ([[Angeles Lakanbalen|Angeles]], [[Mabalacat Lakanbalen|Mabalacat]], [[Magalang]] & [[Tarlac]])
 
-== References ==
+== Dalerayan (Reference) ==
 {{Reflist}}
 
-==External links==
+==Suglung Palwal (External links)==
 *{{facebook|kapampangankupagmaragulku2012}} Fan Page
 *[https://www.facebook.com/groups/kapampangankupagmaragulku2011/ Kapampangan Ku Pagmaragul Ku (KKPK) International Inc.] on [[Facebook]] Group
 *[https://twitter.com/kkpkintofficial @KKPKIntOfficial] on [[Twitter]]
