/* Partikular na Layunin */

--- a/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
+++ b/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
@@ -25,9 +25,9 @@ Ing Pangunahing layunin ning KKPK para apisanmetung nala ding Kapampangan, mamye
 
 ==Partikular na Layunin==
 
-*To assist and provide the Kapampangan people in their basic social needs.
-*To uplift the pride of Kapampangan people.
-*To assert unification in all issues related to the Kapampangan people.
+*Para asopan at adinan careng cailangan da ding Kapampangan.
+*Para ipagmaragul ing Lahing Kapampangan.
+*Para igiit ing pamisanmetung lalu na careng isyu patungkul careng Kapampangan.
 
 == Mamuntukan==
 
