*Empty MediaWiki Message*

--- a/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
+++ b/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
@@ -5,9 +5,9 @@
 | motto                   = "''Lugud, Kapayapan, Pamibuklud-buklud ''" (Love, Peace & Unity)
 | image_map               = Kapampangan Ku Pagmaragul Ku (KKPK) International Inc.jpg
 | map_alt                 =
-| subdivision_type        = Bansa
+| subdivision_type        = [[Ding_Bangsa_ning_yatu|Bangsa]]
 | subdivision_name        = {{flag|Filipinas}}
-| subdivision_type1       = [[Regions of the Philippines|Labuad]]
+| subdivision_type1       = [[Ding_Labuad_ning_Filipinas|Labuad]]
 | subdivision_name1       = [[Kalibudtarang Luzon]] <small>(Labuad III)</small>
 | established_title       = Mitatag
 | established_date        = Septiembri 18, 2011
