*Empty MediaWiki Message*

--- a/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
+++ b/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
@@ -54,4 +54,4 @@ Ing Founder apin I [https://commons.wikimedia.org/wiki/File:Jetlee_Yusi_Tiongco.
 *[http://www.youtube.com/watch?v=E0JTTBuWlu4 KKPK queng TV Patrol Pampanga]
 *[http://siuala.com/aguman-sulat-kapampangan/ Siuálâ ding Meángûbié on Kulitan]
 *[http://usappampanga.com/forum/viewtopic.php?t=5 USAP Pampanga Forum]
-*Robby Tantingco [http://www.sunstar.com.ph/pampanga/opinion/2013/03/18/tantingco-kapampangan-cardinal-273587 The Kapampangan Cardinal]
+*Robby Tantingco [http://www.sunstar.com.ph/pampanga/opinion/2013/03/18/tantingco-kapampangan-cardinal-273587 The Kapampangan Cardinal].
