--- a/Pampanga.mw
+++ b/Pampanga.mw
@@ -175,7 +175,7 @@ Ing lalawigan karinan de reng 33ng collegio/universities.  Kayabe la keti reti d
 * Pampanga Colleges, Macabebe, Pampanga
 * Philippine State College of Aeronautics- Pampanga Extension, Basa Air Base, Floridablanca
 * Somascan Fathers Seminary, Lubao, Pampanga
-* Don Honorio Ventura College of Arts and Trades, Poblacion, Bacolor
+* [[:en:Don_Honorio_Ventura_Technological_State_University|Don Honorio Ventura Technological State University]] (Don Honorio Ventura College of Arts and Trades), Poblacion, Bacolor
 * University of the Philippines-Pampanga, Clark Special Economic Zone
 
 == Bantug a Kapampangan ==
