english wikipedia link at karagdagan bayung iskwela

--- a/Pampanga.mw
+++ b/Pampanga.mw
@@ -165,18 +165,19 @@ Ing lalawigan karinan de reng 33ng collegio/universities.  Kayabe la keti reti d
 * STI College, Angeles City and City of San Fernando
 * Jose C. Feliciano College, Inc., Dau, Mabalacat
 * Saint Michael's College, Guagua
-* Guagua National College, Guagua
+* [[:en:Guagua_National_Colleges|Guagua National College]], Guagua
 * Dau College, Mabalacat
 * Saint Anthony College of Technology, Mabalacat
 * Padova Polytechnic College, Dau, Mabalacat
 * Megabyte College of Science and Technology, Floridablanca and Guagua
 * Holy Cross College Pampanga, Sta. Lucia, Sta. Ana
-* Pampanga Agricultural College, Magalang
+* [[:en:Pampanga_State_Agricultural_University|Pampanga State Agriculture University]] (Pampanga Agricultural College), Magalang
 * Pampanga Colleges, Macabebe, Pampanga
-* Philippine State College of Aeronautics- Pampanga Extension, Basa Air Base, Floridablanca
+* [[:en:Philippine_State_College_of_Aeronautics|Philippine State College of Aeronautics]]- Pampanga Extension, Basa Air Base, Floridablanca
 * Somascan Fathers Seminary, Lubao, Pampanga
 * [[:en:Don_Honorio_Ventura_Technological_State_University|Don Honorio Ventura Technological State University]] (Don Honorio Ventura College of Arts and Trades), Poblacion, Bacolor
 * University of the Philippines-Pampanga, Clark Special Economic Zone
+* Intercontinental School, Guagua
 
 == Bantug a Kapampangan ==
 
