--- a/Talâ_da_ring_gobernador_ning_Pampanga.mw
+++ b/Talâ_da_ring_gobernador_ning_Pampanga.mw
@@ -93,8 +93,10 @@ PROVINCIAL GOVERNORS
 *1976-1980	[[Juanita L. Nepomuceno]]	
 *1980-1986	[[Estelito P. Mendoza]]		
 *1986-1995	[[Bren Z. Guiao]]			
-*1995-2004	[[Manuel M. Lapid]]		
-*2004-Present	[[Mark T. Lapid]]
+*1995-2004	[https://en.wikipedia.org/wiki/Lito_Lapid Manuel M. Lapid]		
+*2004-2007	[https://en.wikipedia.org/wiki/Mark_Lapid Mark T. Lapid]
+*2007-2010	[https://en.wikipedia.org/wiki/Eddie_Panlilio Rev. Fr. Eddie T. Panlilio]
+*2010-Present	[[Lilia G. Pineda]]
 
 Source: Henares, Ivan Anthony S. "Filipino Alcaldes Mayores in the Province of Pampanga," paper presented at the First International Conference on Kapampangan Studies, September 2001.
 
