/* Dadayuan da Keti */

--- a/Pampanga.mw
+++ b/Pampanga.mw
@@ -83,9 +83,9 @@ Ing Pampanga atin yang aduang pulung [[Ding Balen ning Filipinas|balen]] ampong 
 * Last Friday of October — Apo Fiesta, Angeles Lakanbalen
 * October — La Naval Fiesta,  Angeles Lakanbalen
 * November (Last week of  November) — [http://duman.azotea.org Duman Festival], Sta. Rita
-* December 1-7 — [[Sinukwan Festival]], San Fernando Lakanbalen
+* December 1-7 — [[:en:Sinukwan_Festival|Sinukwan Festival]], San Fernando Lakanbalen
 * December 11 — Aldo Ning Kapampangan (Pampanga Day)  
-* December 23 — Parul Festival ([[Giant Lantern Festival]]), [[San Fernando Lakanbalen]]
+* December 23 — Parul Festival ([[:en:Giant_Lantern_Festival|Giant Lantern Festival]]), [[San Fernando Lakanbalen]]
 
 ===== Maamlat a Pisamban =====
 * St. Peter Shrine, [[Apalit, Pampanga|Apalit]]
