/* Recreational facilities at leisure parks */

--- a/Pampanga.mw
+++ b/Pampanga.mw
@@ -104,7 +104,7 @@ Ing Pampanga atin yang aduang pulung [[Ding Balen ning Filipinas|balen]] ampong 
 * Holy Family Parish, Colgante [[Apalit, Pampanga|Apalit]]
 
 ===== Recreational facilities at leisure parks =====
-* [[Paskuhan Village]] "Hilaga" ([[San Fernando Lakanbalen]])
+* [[:en:Paskuhan_Village|Paskuhan Village]] "Hilaga" ([[San Fernando Lakanbalen]])
 * Bren Z. Guiao Sports Complex ([[San Fernando Lakanbalen]])
 * Benigno Aquino Hall ([[San Fernando Lakanbalen]])
 * Lakeshore ([[Mexico, Pampanga|Mexico]])
@@ -177,7 +177,7 @@ Ing lalawigan karinan de reng 33ng collegio/universities.  Kayabe la keti reti d
 * Somascan Fathers Seminary, Lubao, Pampanga
 * [[:en:Don_Honorio_Ventura_Technological_State_University|Don Honorio Ventura Technological State University]] (Don Honorio Ventura College of Arts and Trades), Poblacion, Bacolor
 * University of the Philippines-Pampanga, Clark Special Economic Zone
-* Intercontinental School, Guagua
+* InterContinental School, Guagua
 
 == Bantug a Kapampangan ==
 
